FIX: SecurityConfig 수정 - 지도에서 멍플 디테일페이지 접근 시 (권한 허용 )   * 로그인 없이  접근 가능하게 수정 - setAllowedOrigins 설정 yml에서 설정하도록 변경