@@ -5,6 +5,7 @@ import com.delgo.reward.comm.security.jwt.filter.JwtAuthenticationFilter;
 import com.delgo.reward.comm.security.jwt.filter.JwtAuthorizationFilter;
 import com.delgo.reward.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpStatus;
@@ -18,7 +19,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity // 시큐리티 활성화 -> 기본 스프링 필터체인에 등록
@@ -26,6 +27,9 @@ import java.util.Arrays;
 public class SecurityConfig extends WebSecurityConfigurerAdapter{
 
 	private final UserRepository userRepository;
+
+	@Value("${config.cors-allow-url}")
+	String CORS_ALLOW_URL;
 
 	@Bean
 	public BCryptPasswordEncoder passwordEncoder() {
@@ -36,11 +40,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter{
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
 
-//		configuration.addAllowedOriginPattern("*");
-		configuration.setAllowedOrigins(Arrays.asList(
-				"https://www.test.delgo.pet",
-				"http://localhost:3000"
-		));
+		configuration.setAllowedOrigins(List.of(CORS_ALLOW_URL));
 		configuration.addAllowedMethod("*");
 		configuration.addAllowedHeader("*");
 		configuration.addExposedHeader("Authorization_Access, Authorization_Refresh");
@@ -75,6 +75,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter{
 				.antMatchers("/api/fcm/**").permitAll()
 				.antMatchers("/api/token/reissue").permitAll()
 				.antMatchers("/api/certification/all").permitAll()
+				.antMatchers("/api/certification/mungple").permitAll()
 				.antMatchers("/api/account/logout/**").permitAll()
 
 				// delgo-map
@@ -85,6 +86,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter{
 				.antMatchers("/api/photo/mungple/*").permitAll()
 				.antMatchers("/api/photo/achievements/*").permitAll()
 				.antMatchers("/api/mungple").permitAll()
+				.antMatchers("/api/mungple/detail").permitAll()
 				.antMatchers("/api/mungple/category/*").permitAll()
 				.antMatchers("/health-check").permitAll()
 				.antMatchers("/kafka/**").permitAll()
